--- a/templates/Services.html
+++ b/templates/Services.html
@@ -44,71 +44,61 @@
         <button id="cart-button" onclick="addToCart()">Add to Cart</button>
       </div>
     </header>
-
-    <section class="fotos">
-      <img src="../images/imagenes_servicios/abuela.jpg" />
-      <img src="../images/imagenes_servicios/compra.jpg" />
-      <img src="../images/imagenes_servicios/limpieza.jpg" />
+    <section class="com">
+      <h1 id="h1">Compañía</h1>
+      <div class="compañia">
+          <img class="imageneser" src="../images/imagenes_servicios/abuela.jpg" alt="">
+          <div class="compañias">
+              <p><h3>En manos moradas, nuestra misión es brindar tranquilidad y bienestar a las familias alrededor del mundo.</h3>
+              Entendemos lo importante que es para ti el cuidado de tus seres queridos, especialmente cuando se trata
+              de tus mayores. Es por eso que nos preocupamos profundamente por garantizar que tus seres queridos estén
+              siempre acompañados, con amor y atención dedicados, incluye:</p>
+              <ul>
+                   <li>Citas medicas</li>
+                   <li>Paseo</li>
+                   <li>Actividades de ocio</li>
+                   
+               </ul>
+           </div>
+      </div>
     </section>
-
-    <div class="tituloser">
-      <h1>Que incluyen nuestros servicios ?</h1>
-    </div>
-
-    <div class="servicios">
-      <div class="serva">
-        <h2>Compañía</h2>
-        <p>
-          En Manos Doradas, nuestra misión es brindar tranquilidad y bienestar a
-          las familias alrededor del mundo. Entendemos lo importante que es para
-          ti el cuidado de tus seres queridos, especialmente cuando se trata de
-          tus mayores. Es por eso que nos preocupamos profundamente por
-          garantizar que tus seres queridos estén siempre acompañados, con amor
-          y atención dedicados.
-        </p>
-        <ul>
-          <li>Citas medicas</li>
-          <li>Paseo</li>
-          <li>Actividades de ocio</li>
-          <li>Aseo</li>
-        </ul>
+    <section>
+      <h1 id="h1">Compra</h1>
+      <div class="compra">
+          <img class="imageneser" src="../images/imagenes_servicios/compra.jpg" alt="">
+          <div class="compras">
+              <p><h3>Confía en manos doradas para brindar a tus mayores el apoyo y las provisiones necesarias para un hogar
+              feliz y saludable.Nuestra dedicación a la excelencia y la atención personalizada nos distingue.</h3>
+              Permítenos ser el vínculo de confianza que necesitas para garantizar que tus seres queridos siempre
+              tengan las provisiones adecuadas para vivir de manera plena y segura, incluye:</p>                 
+               <ul>
+                  <li>Realizar la compra</li>
+                  <li>Elaboración de alimentos</li>
+                  <li>Asistencia de nutrición</li>
+               </ul>
+          </div>
       </div>
-
-      <div class="servb">
-        <h2>Compra</h2>
-        <p>
-          Confía en Manos Doradas para brindar a tus mayores el apoyo y las
-          provisiones necesarias para un hogar feliz y saludable. Nuestra
-          dedicación a la excelencia y la atención personalizada nos distingue.
-          Permítenos ser el vínculo de confianza que necesitas para garantizar
-          que tus seres queridos siempre tengan las provisiones adecuadas para
-          vivir de manera plena y segura.
-        </p>
-        <ul>
-          <li>Realizar la compra</li>
-          <li>Elaboración de alimentos</li>
-        </ul>
+    </section>   
+      
+    <section>
+        <h1 id="h1">limpieza</h1>
+        <div class="limpieza">
+          <img  class=imageneser" src="../images/imagenes_servicios/limpieza.jpg" alt="">                        
+          <div class="limpiezas">
+              <p><h3>En manos doradas, nuestra principal misión es garantizar que tus seres queridos mayores vivan en un
+              ambiente limpio y confortable</h3>.Nos dedicamos a brindar un cuidado integral que va más allá de la simple
+              limpieza y comodidad en el hogar Nos esforzamos por crear un espacio donde la calidad de vida y el
+              bienestar de tus seres queridos sean la máxima prioridad para que disfruten de
+              una vida plena y sin preocupaciones en su propio hogar, incluye:</p>
+              <ul>
+               <li>Limpieza general</li>
+               <li>Aseo y higiene personal</li>
+               <li>Orden del mobiliario</li>
+              </ul>
+        </div>
       </div>
-
-      <div class="servc">
-        <h2>Limpieza</h2>
-        <p>
-          "En Manos Doradas, nuestra principal misión es garantizar que tus
-          seres queridos mayores vivan en un ambiente limpio y confortable. Nos
-          dedicamos a brindar un cuidado integral que va más allá de la simple
-          limpieza y comodidad en el hogar; nos esforzamos por crear un espacio
-          donde la calidad de vida y el bienestar de tus seres queridos sean la
-          máxima prioridad. Nuestra pasión radica en proporcionar un ambiente
-          que promueva la seguridad, la limpieza y el confort, para que tus
-          seres queridos disfruten de una vida plena y sin preocupaciones en su
-          propio hogar.
-        </p>
-        <ul>
-          <li>Limpieza general</li>
-        </ul>
-      </div>
-    </div>
-
+    </section>
+    
     <footer>
       <p>&copy; 2023 Golden Hands</p>
     </footer>
