--- a/css/style.css
+++ b/css/style.css
@@ -392,6 +392,9 @@ textarea{
 }
 /* Fin de la seccion de contacto */
 
+/* Estilos para la sección About Us */
+
+/* Fin de la seccion de About Us */
 /**/
 
 /*Responsive*/ /*con responsabilidad*/
