--- a/templates/AboutUs.html
+++ b/templates/AboutUs.html
@@ -20,13 +20,13 @@
         <div class="company-name">
           <h1>Golden Hands</h1>
         </div>
-  
+        
         <nav>
           <ul>
-            <li><a href="Services.html">Services</a></li>
-            <li><a href="Products.html">Products</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="AboutUs.html">AboutUs</a></li>
+            <li><a href="templates/Services.html">Services</a></li>
+            <li><a href="templates/Products.html">Products</a></li>
+            <li><a href="templates/Contact.html">Contact</a></li>
+            <li><a href="templates/AboutUs.html">AboutUs</a></li>
           </ul>
         </nav>
 
@@ -36,9 +36,44 @@
         </div>
 
       </header>
+      <main class="aboutus">
+        <section class="container">
+            
+            <article class="acercade" id="image-with-text">
+                <img src="../images/imagenes_aboutus/imagen1.jpg" alt="imagen1">
+                <div class="parrafo1">
+                   <h1 class="titulo">Nuestra Pasión por el Bienestar</h1>
+                   <p class="textacercade">
+                    En Manos Doradas, nos dedicamos apasionadamente a proporcionar apoyo integral a nuestros mayores, reconociendo la importancia de su bienestar y comodidad en cada etapa de la vida. Nuestro compromiso es ofrecer servicios de acompañamiento personalizados y productos especializados que mejoren la calidad de vida de quienes han acumulado sabiduría a lo largo de los años.
+                    </p>
+                </div>
+            </article>
 
-      <h2>Contenido about us <h2>
+            <article class="mision" id="image-with-text">
+                <img src="../images/imagenes_aboutus/imagen2.jpg" alt="imagen2">
+                <div class="parrafo2">
+                    <h1 class="titulo">Nuestra Misión</h1>
+                    <p class="textmision">
+                     Nuestra misión es ser un faro de apoyo y comodidad para la comunidad de personas mayores. Buscamos no solo satisfacer sus necesidades cotidianas, sino también enriquecer sus vidas a través de servicios personalizados y productos de alta calidad, promoviendo un envejecimiento activo y saludable.
+                    </p>
+                </div>
+            </article>
 
+            <article class="razones" id="image-with-text">
+                <img src="../images/imagenes_aboutus/imagen3.jpg" alt="imagen3">
+               <div class="parrafo3">
+                <h1 class="titulo">Razones para Confiar en Nosotros</h1>
+                <p class="textrazones">
+                 En Manos Doradas, nos esforzamos por crear un entorno en el que la atención, el respeto y la empatía son la base de cada interacción. Nuestro equipo está comprometido con brindar un servicio excepcional y productos de calidad, adaptados a las necesidades individuales de cada persona mayor a la que servimos.
+                </p>
+               </div>
+            </article>
+            
+        </section> 
+        <h2 class="agradecimiento">
+          ¡Gracias por confiar en Manos Doradas para cuidar de ti y tus seres queridos!
+        </h2>
+    </main>   
   <footer>
     <p>&copy; 2023 Golden Hands</p>
   </footer>
