--- a/templates/AboutUs.html
+++ b/templates/AboutUs.html
@@ -20,13 +20,13 @@
         <div class="company-name">
           <h1>Golden Hands</h1>
         </div>
-        
+  
         <nav>
           <ul>
-            <li><a href="templates/Services.html">Services</a></li>
-            <li><a href="templates/Products.html">Products</a></li>
-            <li><a href="templates/Contact.html">Contact</a></li>
-            <li><a href="templates/AboutUs.html">AboutUs</a></li>
+            <li><a href="Services.html">Services</a></li>
+            <li><a href="Products.html">Products</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="AboutUs.html">AboutUs</a></li>
           </ul>
         </nav>
 
@@ -74,6 +74,8 @@
           ¡Gracias por confiar en Manos Doradas para cuidar de ti y tus seres queridos!
         </h2>
     </main>   
+
+
   <footer>
     <p>&copy; 2023 Golden Hands</p>
   </footer>
