--- a/templates/AboutUs.html
+++ b/templates/AboutUs.html
@@ -21,12 +21,12 @@
           <h1>Golden Hands</h1>
         </div>
   
-        <nav>
-          <ul>
-            <li><a href="Services.html">Services</a></li>
-            <li><a href="Products.html">Products</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="AboutUs.html">AboutUs</a></li>
+        <nav class="navegacion">
+          <ul class="navegacion">
+            <li class="navegacion"><a href="Services.html">Services</a></li>
+            <li class="navegacion"><a href="Products.html">Products</a></li>
+            <li class="navegacion"><a href="Contact.html">Contact</a></li>
+            <li class="navegacion"><a href="AboutUs.html">AboutUs</a></li>
           </ul>
         </nav>
 
