--- a/templates/Products.html
+++ b/templates/Products.html
@@ -49,9 +49,9 @@
       <div class="secondary">
         <nav class="product-nav">
           <ul>
-            <li><a href="../intolerancias/Gluten.html">Sin Gluten</a></li>
-            <li><a href="../intolerancias/Lactosa.html">Sin Lactosa</a></li>
-            <li><a href="../intolerancias/Frutos.html">Sin Frutos Secos</a></li>
+            <li><a href="#gluten">Sin Gluten</a></li>
+            <li><a href="#lacteo">Sin Lactosa</a></li>
+            <li><a href="#frutos">Sin Frutos Secos</a></li>
           </ul>
         </nav>
       </div>
