--- a/templates/Services.html
+++ b/templates/Services.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -30,12 +31,12 @@
         <h1>Golden Hands</h1>
       </div>
 
-      <nav class="navegacion">
-        <ul class="navegacion">
-          <li class="navegacion"><a href="Services.html">Services</a></li>
-          <li class="navegacion"><a href="Products.html">Products</a></li>
-          <li class="navegacion"><a href="Contact.html">Contact</a></li>
-          <li class="navegacion"><a href="AboutUs.html">AboutUs</a></li>
+      <nav>
+        <ul>
+          <li><a href="Services.html">Services</a></li>
+          <li><a href="Products.html">Products</a></li>
+          <li><a href="Contact.html">Contact</a></li>
+          <li><a href="AboutUs.html">AboutUs</a></li>
         </ul>
       </nav>
 
@@ -53,10 +54,12 @@
               Entendemos lo importante que es para ti el cuidado de tus seres queridos, especialmente cuando se trata
               de tus mayores. Es por eso que nos preocupamos profundamente por garantizar que tus seres queridos estén
               siempre acompañados, con amor y atención dedicados, incluye:</p>
-              <ul>
+               <ul>
                    <li>Citas medicas</li>
                    <li>Paseo</li>
                    <li>Actividades de ocio</li>
+                   <button class="butser">Añadir al carrito</button>
+               </ul>
                    
                </ul>
            </div>
@@ -74,7 +77,8 @@
                <ul>
                   <li>Realizar la compra</li>
                   <li>Elaboración de alimentos</li>
-                  <li>Asistencia de nutrición</li>
+                  <li>Asistencia de nutrición</li>  
+                  <button class="butser">Añadir al carrito</button>
                </ul>
           </div>
       </div>
@@ -83,7 +87,7 @@
     <section>
         <h1 id="h1">limpieza</h1>
         <div class="limpieza">
-          <img  class=imageneser" src="../images/imagenes_servicios/limpieza.jpg" alt="">                        
+          <img  class="imageneser" src="../images/imagenes_servicios/limpieza.jpg" alt="">                        
           <div class="limpiezas">
               <p><h3>En manos doradas, nuestra principal misión es garantizar que tus seres queridos mayores vivan en un
               ambiente limpio y confortable</h3>.Nos dedicamos a brindar un cuidado integral que va más allá de la simple
@@ -94,6 +98,11 @@
                <li>Limpieza general</li>
                <li>Aseo y higiene personal</li>
                <li>Orden del mobiliario</li>
+               <button class="butser">
+                Añadir al carrito
+                  <img src="/images/imagenes_servicios/carrito.png" alt="">
+              </button>
+               </ul>
               </ul>
         </div>
       </div>
