--- a/templates/Services.html
+++ b/templates/Services.html
@@ -31,12 +31,12 @@
         <h1>Golden Hands</h1>
       </div>
 
-      <nav>
-        <ul>
-          <li><a href="Services.html">Services</a></li>
-          <li><a href="Products.html">Products</a></li>
-          <li><a href="Contact.html">Contact</a></li>
-          <li><a href="AboutUs.html">AboutUs</a></li>
+      <nav class="navegacion">
+        <ul class="navegacion">
+          <li class="navegcion"><a href="Services.html">Services</a></li>
+          <li class="navegacion"><a href="Products.html">Products</a></li>
+          <li class="navegacion"><a href="Contact.html">Contact</a></li>
+          <li class="navegacion"><a href="AboutUs.html">AboutUs</a></li>
         </ul>
       </nav>
 
