--- a/css/style.css
+++ b/css/style.css
@@ -429,7 +429,7 @@
   display: flex;
 }
 .todo h1{
-  margin: 5% 10%;
+  margin: 2% 10%;
 }
 .datos p{
   margin-left: 10%;
@@ -451,10 +451,11 @@ margin-left: 5%;
  background-color: #90CCD1;
  border-radius: 2%;
  margin-bottom: 2%;
+ padding: 1%;
 }
 .formulario input{
   margin: 2% 2%;
-  width: 90%;
+  width: 95%;
   padding: 3%;
   border-radius: 15px;
   border: 1px solid;
@@ -463,7 +464,7 @@ margin-left: 5%;
 }
 textarea{
   margin-left: 2%;
-  width: 365px;
+  width: 360px;
   border-radius: 2%;
   border-radius: 15px;
   border: 1px solid;
