--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -20,11 +20,11 @@
   <body>
     <header>
       <div class="logo">
-        <img
-          class="logo"
+        <a href="../index.html">        
+          <img class="logo"
           src="../images/logo/Golden_Hands.png"
-          alt="Golden Hands Logo"
-        />
+          alt="Golden Hands Logo"/>
+        </a>
       </div>
       <div class="company-name">
         <h1>Golden Hands</h1>
