--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@
 #h1 {
   color: #fafafa;
   margin: 40px;
-  height: 30px;
+  height: 35px;
   margin-top: 30px;
   background-color: #c78943;
   padding-left:12px;
@@ -391,6 +391,7 @@
   padding: 7px 25px;
   box-shadow: 0 0 10px #754515 inset;
   border-radius: 10px;
+  font-weight: bold;
 }
 
 .butser img {
