--- a/templates/AboutUs.html
+++ b/templates/AboutUs.html
@@ -78,8 +78,16 @@
     </main>   
 
 
-  <footer>
-    <p>&copy; 2023 Golden Hands</p>
+    <footer class="footer">
+      <div class="footer-content container">
+          <div class="link">
+              <h3>&copy; 2023 Golden Hands</h3>
+              <ul>
+                  <li><i class='bx bxl-instagram' ></i></li>
+                  <li><i class='bx bxl-linkedin-square' ></i></li>
+              </ul>
+          </div>
+      </div>
   </footer>
 
   
