--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -65,8 +65,16 @@
         <span><input type="checkbox"> AUTORIZO el tratamiento de mis datos personales con la finalidad de atender mi contacto</span>
       </section>
     </main>
-    <footer>
-      <p>&copy; 2023 Golden Hands</p>
-    </footer>
+   <footer class="footer">
+      <div class="footer-content container">
+          <div class="link">
+              <h3>&copy; 2023 Golden Hands</h3>
+              <ul>
+                  <li><i class='bx bxl-instagram' ></i></li>
+                  <li><i class='bx bxl-linkedin-square' ></i></li>
+              </ul>
+          </div>
+      </div>
+  </footer>
   </body>
 </html>
