--- a/templates/Products.html
+++ b/templates/Products.html
@@ -206,8 +206,16 @@
         </div>
     </main>
     </section>
-    <footer>
-      <p>&copy; 2023 Golden Hands</p>
-    </footer>
+      <footer class="footer">
+      <div class="footer-content container">
+          <div class="link">
+              <h3>&copy; 2023 Golden Hands</h3>
+              <ul>
+                  <li><i class='bx bxl-instagram' ></i></li>
+                  <li><i class='bx bxl-linkedin-square' ></i></li>
+              </ul>
+          </div>
+      </div>
+  </footer>
   </body>
 </html>
