--- a/templates/Services.html
+++ b/templates/Services.html
@@ -106,8 +106,16 @@
       </div>
     </section>
     
-    <footer>
-      <p>&copy; 2023 Golden Hands</p>
-    </footer>
+    <footer class="footer">
+      <div class="footer-content container">
+          <div class="link">
+              <h3>&copy; 2023 Golden Hands</h3>
+              <ul>
+                  <li><i class='bx bxl-instagram' ></i></li>
+                  <li><i class='bx bxl-linkedin-square' ></i></li>
+              </ul>
+          </div>
+      </div>
+  </footer>
   </body>
 </html>
