medias responsive .css

--- a/css/style.css
+++ b/css/style.css
@@ -616,6 +616,30 @@ font-size: 35px;
       border-bottom-left-radius: 20px;
       border-top-right-radius: 0px;
   }
+/*Poner vuestro responsive aqui*/
+
+/* Fin del estilo de Home*/
+
+/*Estilos para la sección de Productos*/
+
+/*Fin productos*/
+
+/* aqui empieza el estilo de la seccion servicios */
+
+/* Fin de la seccion de servicios */
+
+/* Estilos para la sección contacto */
+
+/* Fin de la seccion de contacto */
+
+/* Estilos para la sección About Us */
+
+
+/* Fin de la seccion de About */
+
+/*Footer*/
+
+/*Fin del Footer*/
 
 }  
 
