Responsive products update

--- a/css/style.css
+++ b/css/style.css
@@ -649,15 +649,17 @@ font-size: 35px;
 }
 
 .product-content {
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  padding: 10px;
 }
 
 .product {
-  padding: 5px;
+  padding: 10px;
 }
 
-.products{
-  padding: 10px;
+.products #gluten, #lacteo, #frutos{
+  padding: 20px;
 }
 /*Fin productos*/
 }  
