--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
   }
     
   .company-name h1 {
-    font-size: 50px;
+    font-size: 52px;
     color: #c7af43;
   }
     
@@ -93,7 +93,26 @@
     justify-content: center;
     height: 82vh;
   }
- 
+  .letra{
+    margin-top: 1%;  
+    margin-bottom: 10%;
+    margin-right: 50%;
+    margin-left: 5%;
+    object-position: 5%;
+    transform: translate(-50%, -50%);
+    color: #203048;
+    font-size: 19px; 
+    font-weight: bold;
+    font-style: oblique;
+    text-align: center;
+  }
+  .float-container{
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 20% 50%;
+    align-items: start;
+  }
+
 /* Fin del estilo de Home*/
 
 /*Estilo Login*/
@@ -591,7 +610,51 @@ font-size: 35px;
   html {
    font-size: 12px;
   }
-
+/*HOME responsive */
+  header {
+    width: 100%;
+  }
+  .letra {
+    font-size: 14px;
+    padding-left: 18%;
+    margin-right: 5%;
+  }
+  .logo img {
+    width: 100px;
+    height: 90px;
+  }
+  .float-container{
+    rid-template-rows: auto; /* Cambiar a filas automáticas en pantallas más pequeñas */
+  }
+  .company-name h1{
+    text-align: center;
+    font-size: 25px;
+    margin-top: 10px;
+  }
+  .button-container {
+    display: flex;
+    width: 25%;
+  }
+  .navegacion ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    padding: 8px;
+    margin: 20px 5%;
+    text-align: right;
+    justify-content: flex-start;
+    width: 100px;
+  }
+  .background-image {
+    background: url('../images/fondo/acompañamiento.png') no-repeat  fixed transparent;
+    background-size: cover;
+    display: flex;
+    position:static;
+    align-items: center;
+    justify-content: center;
+    height: 65vh;
+  }
+/*fin estilo de HOME responsive */
   /*Estilos para la sección de Productos*/
   .product-nav ul {
     grid-template-columns: 1fr;
@@ -599,7 +662,7 @@ font-size: 35px;
     justify-items: left;
     padding: 10px;
   }
-
+  
   .product-content {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
@@ -663,6 +726,44 @@ textarea{
       padding: 20px;
       border-bottom-left-radius: 20px;
       border-top-right-radius: 0px;
+  }
+/* home moviles */
+  .letra {
+    font-size: 14px;
+    padding-left: 50%;
+  }
+  .logo img {
+    width: 100px;
+    height: 90px;
+  }
+  .company-name h1{
+    text-align: center;
+    font-size: 25px;
+    margin-top: 10px;
+  }
+  .button-container {
+    display: flex;
+    width: 25%;
+  }
+    
+  .navegacion ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    padding: 8px;
+    margin: 20px 12 px;
+    text-align: right;
+    justify-content: flex-start;
+    width: 100px;
+  }
+
+  .background-image {
+    background: url('../images/fondo/acompañamiento.png') no-repeat  fixed transparent;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 65vh;
   }
 /* Fin del estilo de Home*/
 
