cambios en servicios

--- a/templates/Services.html
+++ b/templates/Services.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -18,7 +17,7 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
 
-  <body>
+  <body class="bodys">
     <header>
       <div class="logo">
         <a href="../index.html"><img    
@@ -47,11 +46,11 @@
       <h1 id="h1">Compañía</h1>
       <div class="compañia">
           <img class="imageneser" src="../images/imagenes_servicios/abuela.jpg" alt="">
-          <div class="compañias">
-              <p><h3>En manos moradas, nuestra misión es brindar tranquilidad y bienestar a las familias alrededor del mundo.</h3>
+          <div class="compañias-container">
+              <h3>En manos moradas, nuestra misión es brindar tranquilidad y bienestar a las familias alrededor del mundo.</h3>
               Entendemos lo importante que es para ti el cuidado de tus seres queridos, especialmente cuando se trata
               de tus mayores. Es por eso que nos preocupamos profundamente por garantizar que tus seres queridos estén
-              siempre acompañados, con amor y atención dedicados, incluye:</p>
+              siempre acompañados, con amor y atención dedicados, incluye:
                <ul>
                    <li>Citas medicas</li>
                    <li>Paseo</li>
@@ -59,36 +58,36 @@
                    <button class="butser">Añadir al carrito</button>
                </ul>
                    
-               </ul>
+              
            </div>
       </div>
     </section>
-    <section>
+    <section class="compr">
       <h1 id="h1">Compra</h1>
       <div class="compra">
-          <img class="imageneser" src="../images/imagenes_servicios/compra.jpg" alt="">
-          <div class="compras">
-              <p><h3>Confía en manos doradas para brindar a tus mayores el apoyo y las provisiones necesarias para un hogar
-              feliz y saludable.Nuestra dedicación a la excelencia y la atención personalizada nos distingue.</h3>
-              Permítenos ser el vínculo de confianza que necesitas para garantizar que tus seres queridos siempre
+          <img class="imageneser1" src="../images/imagenes_servicios/compra.jpg" alt="">
+          <div class="compras-container">
+              <h3>Confía en manos doradas para brindar a tus mayores el apoyo y las provisiones necesarias para un hogar
+              feliz y saludable</h3>
+              <p>Permítenos ser el vínculo de confianza que necesitas para garantizar que tus seres queridos siempre
               tengan las provisiones adecuadas para vivir de manera plena y segura, incluye:</p>                 
                <ul>
                   <li>Realizar la compra</li>
                   <li>Elaboración de alimentos</li>
                   <li>Asistencia de nutrición</li>  
-                  <button class="butser">Añadir al carrito</button>
+                  <button class="butser"><p>Añadir al carrito</p></button>
                </ul>
           </div>
       </div>
     </section>   
       
-    <section>
+    <section class="limp">
         <h1 id="h1">limpieza</h1>
         <div class="limpieza">
           <img  class="imageneser" src="../images/imagenes_servicios/limpieza.jpg" alt="">                        
-          <div class="limpiezas">
-              <p><h3>En manos doradas, nuestra principal misión es garantizar que tus seres queridos mayores vivan en un
-              ambiente limpio y confortable</h3>.Nos dedicamos a brindar un cuidado integral que va más allá de la simple
+          <div class="limpiezas-container">
+              <h3>En manos doradas, nuestra principal misión es garantizar que tus seres queridos mayores vivan en un
+              ambiente limpio y confortable</h3><p>Nos dedicamos a brindar un cuidado integral que va más allá de la simple
               limpieza y comodidad en el hogar Nos esforzamos por crear un espacio donde la calidad de vida y el
               bienestar de tus seres queridos sean la máxima prioridad para que disfruten de
               una vida plena y sin preocupaciones en su propio hogar, incluye:</p>
@@ -117,4 +116,3 @@
       </div>
   </footer>
   </body>
-</html>
