--- a/templates/login.html
+++ b/templates/login.html
@@ -38,7 +38,7 @@
               <i class="bx bxl-linkedin"></i>
             </div>
             <p>o usa tu mail para registrarte</p>
-            <form class="form">
+            <form action="https://goldenhands.netlify.app/" class="form">
               <label>
                 <i class="bx bx-user"></i>
                 <input type="text" placeholder="Nombre Completo" required />
@@ -94,10 +94,6 @@
         </div>
       </div>
     </section>
-    <footer>
-      <p>&copy; 2023 Golden Hands</p>
-    </footer>
-
     <script src="../src/script.js"></script>
   </body>
 </html>
