--- a/templates/login.html
+++ b/templates/login.html
@@ -17,6 +17,31 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
+    <header>
+        <div class="logo">
+         <a href="../index.html">
+          <img class="logo"src="../images/logo/Golden_Hands.png" alt="Golden Hands Logo"/>
+         </a>
+        </div>
+        <div class="company-name">
+          <h1>Golden Hands</h1>
+        </div>
+  
+        <nav class="navegacion">
+          <ul class="navegacion">
+            <li class="navegacion"><a href="Services.html">Services</a></li>
+            <li class="navegacion"><a href="Products.html">Products</a></li>
+            <li class="navegacion"><a href="Contact.html">Contact</a></li>
+            <li class="navegacion"><a href="AboutUs.html">AboutUs</a></li>
+          </ul>
+        </nav>
+
+        <div class="button-container">
+          <a href="login.html" class="login-button">Login</a>
+          <button id="cart-button" onclick="addToCart()">Add to Cart</button>
+        </div>
+
+      </header>
     <section class="login-container">
       <div class="container-form register">
         <div class="information">
